# weather-examiner

./: Cargo.toml  README.md
.github/workflows/: main.yml
resources/test/: dark_sky_weather.json
src/: app.rs  db_manager.rs  extensions.rs  main.rs  min_max_avg.rs  models.rs  templates.rs
src/ui/: day_view.rs  import_data.rs  main_menu.rs  missing_records.rs  mod.rs  month_view.rs  ui_section.rs  utils.rs  weather_diff.rs  weather_predictions.rs  weather_view.rs
