[package]
name = "weather"
version = "0.1.1"
authors = ["Ray Britton <raybritton@gmail.com>"]
edition = "2018"
publish = false
repository = "https://github.com/raybritton/weather-prediction-reliability"
description = "Program to examine weather data to check for prediction reliability"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = {version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rusqlite = { version = "0.21.0", features = ["bundled"] }
lazy_static = "1.4.0"
app_dirs2 = "2.0.4"
log = "0.4.8"
simplelog = "0.7.4"
chrono = "0.4.11"
crossterm = "0.16.0"